add clean to all target

--- a/multithreading/hello_grpc/Makefile
+++ b/multithreading/hello_grpc/Makefile
@@ -7,7 +7,7 @@ CXXFLAGS += -std=c++11
 GRPC_CPP_PLUGIN = grpc_cpp_plugin
 GRPC_CPP_PLUGIN_PATH ?= `which $(GRPC_CPP_PLUGIN)`
 
-all: client server
+all: clean client server
 
 client: hello.pb.o hello.grpc.pb.o hello_grpc_client.o
 	$(CXX) $^ $(LDFLAGS) -o $@
